# solitaire_tui_rs

./: .gitignore  Cargo.toml
src/: main.rs
